Fix: Change admin panel image display to object-fit: contain to prevent cropping

--- a/static/css/admin_panel_new.css
+++ b/static/css/admin_panel_new.css
@@ -50,7 +50,7 @@
 .panel-thumbnail-new img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .panel-image-info {
